--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter 
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.2.9
+  cloud_firestore: ^4.4.3
   google_nav_bar: ^5.0.6
   curved_navigation_bar: ^1.0.3
   provider: ^6.0.5
