--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   google_nav_bar: ^5.0.6
   curved_navigation_bar: ^1.0.3
   provider: ^6.0.5
+  email_validator: ^2.1.17
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
