--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   provider: ^6.0.5
   email_validator: ^2.1.17
   flutter_spinkit: ^5.1.0
+  firebase_core: ^2.7.0
 
 dev_dependencies:
   flutter_test:
