--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   email_validator: ^2.1.17
   flutter_spinkit: ^5.1.0
   firebase_core: ^2.7.0
+  pdf: ^3.9.0
+  printing: ^5.10.1
 
 dev_dependencies:
   flutter_test:
