--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   printing: ^5.10.4
   uuid: ^3.0.7
   url_launcher: ^6.1.11
+  file_picker: ^5.3.2
+  firebase_storage: ^11.2.4
 
 dev_dependencies:
   flutter_test:
