--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   url_launcher: ^6.1.11
   file_picker: ^5.3.2
   firebase_storage: ^11.2.4
+  pay: ^1.1.1
 
 dev_dependencies:
   flutter_test:
