add mpesa intergartaion

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   pdf: ^3.9.0
   printing: ^5.10.4
   uuid: ^3.0.7
+  mpesa_flutter_plugin: ^1.0.0
 
 dev_dependencies:
   flutter_test:
