worked on the lipa na mpesa and creating event page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   mpesa_flutter_plugin: ^1.6.1
   logger: ^1.1.0
   flutter_lints: ^2.0.0
+  image_picker: ^1.0.1
 
 flutter:
   uses-material-design: true
