--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   logger: ^1.1.0
   flutter_lints: ^2.0.0
   image_picker: ^1.0.1
+  flutterwave: ^1.0.3
 
 flutter:
   uses-material-design: true
