--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   logger: ^1.1.0
   flutter_lints: ^2.0.0
   image_picker: ^1.0.1
+  http: ^0.13.6
+  flutter_config: ^2.0.2
+  mpesa_flutter_plugin: ^1.6.1
 
 flutter:
   uses-material-design: true
